# pico_climate_monitor

./: CMakeLists.txt  README.md
include/: dht11.h  display.h
src/: dht11.c  display.c  main.c
